cdap-ui/app/features/explore/explore.less
/*
 * Copyright © 2015 Cask Data, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License"); you may not
 * use this file except in compliance with the License. You may obtain a copy of
 * the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
 * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
 * License for the specific language governing permissions and limitations under
 * the License.
 */

@import "../../styles/variables.less";

body.state-explore {

  .explore-table {
    border: 1px solid @cdap-darkness;
    margin-left: 0;
    margin-right: 0;
    height: 300px;

    .table-list {
      width: 30%;
      height: 100%;
      display: inline-block;
      float: left;
      background-color: yellow;
    }


    .explore-content {
      height: 100%;
      width: 70%;
      float: right;
      display: flex;
      flex-direction: row;

      .tab {
        display: inline-block;
        height: 100%;
        position: relative;


        .tab-heading {
          background-color: white;
          padding: 5px;
          height: 100%;
          overflow-y: hidden;
          display: inline-block;
          width: 10%;


          .heading-rotate {
            transform: rotate(90deg);
            // transform-origin: left top;


            h3 {
              margin: 0px;
            }
          }
        }
        .tab-content {
          display: inline-block;
          vertical-align: top;
          overflow-y: auto;
          top: 0;
          height: 100%;
          content: 60%;

          table.table {
            margin: 0;
          }
        }
      }
    }

  }
}

